packages/build/tests/error/build/fixtures/fail_plugin/plugin.js
module.exports = {
  name: 'netlify-plugin-one',
  onInit({
    utils: {
      build: { failPlugin },
    },
  }) {
    failPlugin('test')
    console.log('onInit')
  },
  onBuild() {
    console.log('onBuild')
  },
}
